force-app/main/default/objects/blng__PaymentAllocationInvoiceLine__c/fields/NetSuite_Invoice_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Invoice_Internal_ID__c</fullName>
    <description>added field for NS integration as per BIZ-48231</description>
    <formula>blng__InvoiceLine__r.blng__Invoice__r.NetSuite_Internal_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NetSuite Invoice Internal ID</label>
    <type>Text</type>
</CustomField>