force-app/main/default/objects/blng__PaymentAllocationInvoiceLine__c/fields/NetSuite_Payment_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Payment_Internal_ID__c</fullName>
    <description>added field for NS integration as per BIZ-48231</description>
    <formula>blng__Payment__r.Netsuite_Payment_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NetSuite Payment Internal ID</label>
    <type>Text</type>
</CustomField>