force-app/main/default/objects/blng__PaymentAllocationInvoiceLine__c/fields/NS_Error__c.field-meta.xml
<CustomField>
    <fullName>NS_Error__c</fullName>
    <description>added field for NS integration as per BIZ-48231</description>
    <label>NS Error</label>
    <length>250</length>
    <type>Text</type>
</CustomField>