force-app/main/default/objects/blng__PaymentAllocationInvoiceLine__c/validationRules/Legal_Entity_needs_to_be_same.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_Entity_needs_to_be_same</fullName>
    <active>true</active>
    <errorConditionFormula>blng__Payment__r.blng__LegalEntity__c   &lt;&gt;  blng__InvoiceLine__r.blng__LegalEntity__c</errorConditionFormula>
    <errorMessage>Invoice Line&apos;s Subsidiary should match the Payment record&apos;s Subsidiary</errorMessage>
</ValidationRule>