force-app/main/default/objects/blng__PaymentAllocationInvoiceLine__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Id__c</columns>
    <columns>blng__InvoiceLine__c</columns>
    <columns>NetSuite_Invoice_Internal_ID__c</columns>
    <columns>NetSuite_Payment_Internal_ID__c</columns>
    <columns>blng__Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>